@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Chemistry-OpenBabel
-version:      1.2.1
+version:      1.3
 version_from: 
 installdirs:  site
 requires:
