@@ -1,4 +1,4 @@
-Chemistry::OpenBabel version 1.2
+Chemistry::OpenBabel version 1.3
 ================================
 
 This module provides a Perl interface to the Open Babel chemistry library. 
